plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.12'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'jacoco'  // Add this line
}

group = 'com.sinker'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:testcontainers:1.19.7'
    testImplementation 'org.testcontainers:mariadb:1.19.7'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.7'
}

// JaCoCo configuration
jacoco {
    toolVersion = "0.8.11"
}

tasks.named('test') {
    useJUnitPlatform()
    outputs.upToDateWhen { false }
    ignoreFailures = true

    finalizedBy jacocoTestReport  // Generate report after tests
}

jacocoTestReport {
    dependsOn test
    
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

// Optional: Enforce minimum coverage
jacocoTestCoverageVerification {
    violationRules {
        rule {
            enabled = true

            // ✅ Package-level coverage for target packages
            element = 'PACKAGE'
            includes = [
                'com.sinker.app.service',
                'com.sinker.app.util',
                'com.sinker.app.converter',
                'com.sinker.app.dto.auth'
            ]
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.80  // 80% coverage minimum
            }
        }
    }
}

tasks.check {
    dependsOn jacocoTestCoverageVerification
}